# VSDLM

./: .gitignore  README.md  pyproject.toml
dataset/: 01_rename_lombardgrid.sh  02_rename_grid_audio_visual.sh  03_batch_mouth_labeler.py  04_cp_summary.sh  05_face_augmentation.py  05_mesh_test.py  05_random_pick.py  06_demo_deimv2_onnx_wholebody34_with_edges.py  06_face_augmentation.py  07_demo_deimv2_onnx_wholebody34_with_edges.py  test_clahe_gray.py
dataset/output_issue/: 001_0004_side_009631_c_000000_o_000000_unk_000053.csv
fan/: fan_onnx.py
vsdlm/: __init__.py  data.py  model.py  pipeline.py
