[project]
name = "vsdlm"
version = "1.0.0"
description = "Visual only speech detection by lip movement."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib==3.10.7",
    "numpy==1.26.4",
    "onnx==1.19.0",
    "onnxruntime-gpu==1.23.0",
    "opencv-python==4.11.0.86",
    "pandas==2.3.3",
]
[tool.uv]
override-dependencies = [
    "sympy>=1.13.1,<1.14",
]
